# gs-build-deploy

./: .gitignore  Dockerfile  Dockerfile.acms  Dockerfile.builder.base  Dockerfile.cas.builder  Dockerfile.cas.client  Dockerfile.license  Dockerfile.runtime.base  Dockerfile.separated  Dockerfile_Rust_1.82_Dev  README.md  authorized_keys  run.sh
.github/: clone_repos.sh
.github/workflows/: afzj-admin-web-deploy.yml  afzj_deploy.yml  build-and-deploy.yml  build-rauthy-dev.yml  build-tokio-console-image.yml  build_rust_red_dist.yml  cas-client-builder.yml  cas-client-demo.yml  docker-license-publish.yml  iot-api-server.yml  jymt-dotnet-v3-server.yml  jymt-web-admin.yml  kz_api_server.yml  kz_web_admin  kzpipe-web-deploy.yml  rust-dev.yml  rust-red-acms.yml  rust-red-builder-base.yml  rust-red-ci-cd-fast.yml  rust-red-ci-cd.yml  rust-red-core-guanshi.yml  rust-red-full.yml  rust-red-iot-full.yml  rust-red-iot-lite.yml  rust-red-iot-next.yml  rust-red-iot-shared.yml  rust-red-kzpipe-lite.yml  rust-red-kzpipe-next.yml  rust-red-main.yml  rust-red-prepare-vendor.yml  rust-red-runtime-base.yml  rust-red-web-deploy.yml
cas-web-demo/: Cargo.toml  README.md
cas-web-demo/lua/: test-odbc.lua
cas-web-demo/odbc-lib/: kdbodbcw.la  libkci.so.5.9  odbc.ini  odbcinst.ini
cas-web-demo/src/: aliyun_sms.rs  main.rs
resources/: README.MD
